Fix bug CORs and custom Front-end

--- a/aspnet-core/src/SE347.L11_DemoApp.Web.Host/appsettings.json
+++ b/aspnet-core/src/SE347.L11_DemoApp.Web.Host/appsettings.json
@@ -1,11 +1,13 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=L11_DemoAppDb; Trusted_Connection=True;"
+    //"Default": "Server=localhost; Database=L11_DemoAppDb; Trusted_Connection=True;"
+   "Default": "Data Source=.\\  SQLEXPRESS; Initial Catalog=DEMO_DATABASE; Integrated Security=True;"
   },
+
   "App": {
     "ServerRootAddress": "http://localhost:21021/",
     "ClientRootAddress": "http://localhost:4200/",
-    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000"
+    "CorsOrigins": "http://localhost:3000,http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:4200"
   },
   "Authentication": {
     "JwtBearer": {
