--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "craco-antd": "^1.14.1",
+    "dotenv": "^8.2.0",
     "famfamfam-flags": "^1.0.0",
     "lodash": "^4.17.15",
     "mobx": "^5.15.0",
