--- a/reactjs/tsconfig.json
+++ b/reactjs/tsconfig.json
@@ -7,6 +7,7 @@
     "jsx": "preserve",
     "moduleResolution": "node",
     "rootDir": "src",
+    "baseUrl": "src",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
