--- a/aspnet-core/src/SE347.L11_DemoApp.Migrator/appsettings.json
+++ b/aspnet-core/src/SE347.L11_DemoApp.Migrator/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=L11_DemoAppDb; Trusted_Connection=True;"
+    "Default": "Data Source=.\\SQLEXPRESS; Initial Catalog=DEMO_DATABASE; Integrated Security=True;"
   }
 }
